Fixed scroll on jump menu to just vert

--- a/src/main/resources/static/css/Market-floating-menu.css
+++ b/src/main/resources/static/css/Market-floating-menu.css
@@ -66,7 +66,7 @@
   bottom: 20px;
   right: 20px;
   max-height: 50vh;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: opacity 250ms;
 }
 .main-nav.active {
